--- a/client/src/App.css
+++ b/client/src/App.css
@@ -73,7 +73,7 @@ a:hover {
 .main {
   display: flex;
   justify-content: space-around;
-  align-items: flex-end;
+  align-items: baseline;
 }
 
 /* ****************** GuestForm************** */
